--- a/backend-java/face-detection/src/main/resources/application.properties
+++ b/backend-java/face-detection/src/main/resources/application.properties
@@ -5,10 +5,7 @@ spring.jpa.hibernate.ddl-auto=update
 logging.level.org.hibernate.SQL=debug
 spring.sql.init.mode=always
 spring.sql.init.schema-locations=classpath:data.sql
+file.upload-dir=backend-java/face-detection/src/main/resources/uploads
 server.port=8080
 
-#logging.level.com.zaxxer.hikari=DEBUG
-#spring.datasource.driver-class-name=org.sqlite.JDBC
-#spring.jpa.database-platform=org.hibernate.community.dialect.SQLiteDialect
-#spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.show-sql=true
+
