--- a/backend-java/face-detection/src/main/resources/application.properties
+++ b/backend-java/face-detection/src/main/resources/application.properties
@@ -1,11 +1,22 @@
-spring.datasource.url=jdbc:sqlite:backend-java/face-detection/src/main/resources/db/alunos.db
+
+# Banco de dados SQLite dentro de resources
+spring.datasource.url=jdbc:sqlite:src/main/resources/banco.db
 spring.datasource.driver-class-name=org.sqlite.JDBC
+
+# Hibernate
 spring.jpa.database-platform=org.hibernate.community.dialect.SQLiteDialect
-spring.jpa.hibernate.ddl-auto=update
-logging.level.org.hibernate.SQL=debug
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
+spring.jpa.defer-datasource-initialization=true
+
+# Inicialização de scripts
 spring.sql.init.mode=always
-spring.sql.init.schema-locations=classpath:data.sql
-file.upload-dir=backend-java/face-detection/src/main/resources/uploads
+spring.sql.init.schema-locations=classpath:schema.sql
+spring.sql.init.data-locations=classpath:data.sql
+
+# Upload de arquivos
+file.upload-dir=src/main/resources/uploads
+
+# Server
 server.port=8080
-
-
+logging.level.org.hibernate.SQL=debug
