--- a/backend-java/face-detection/pom.xml
+++ b/backend-java/face-detection/pom.xml
@@ -69,13 +69,18 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
-        
+        <dependency>
+            <groupId>org.bytedeco</groupId>
+            <artifactId>opencv</artifactId>
+            <version>4.11.0-1.5.12</version>
+        </dependency>
         <dependency>
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
         </dependency>
 
         
+ 
 <!--
         <dependency>
             <groupId>org.xerial</groupId>
