--- a/backend-java/face-detection/pom.xml
+++ b/backend-java/face-detection/pom.xml
@@ -39,6 +39,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>-->
+        <dependency>
+            <groupId>org.bytedeco</groupId>
+            <artifactId>opencv-platform</artifactId>
+            <version>4.11.0-1.5.12</version>
+        </dependency>
         <dependency> 
             <groupId>com.mysql</groupId>
             <artifactId>mysql-connector-j</artifactId>
